fixed classes Product, DiscountedProduct, App, created exception